--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,7 +14,7 @@ monitor=HDMI-A-1,1920x1080@144,0x0,1    # Omen 25 on the left at 144Hz
 # See https://wiki.hyprland.org/Configuring/Keywords/
 exec-once= waybar
 exec = swaybg -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png -m fill
-exec-once=mako &  # or dunst &
+exec-once= swanync
 exec-once = sleep 3 && discord &
 exec-once = sleep 3 && wasistlos &
 exec-once = sleep 4 && hyprctl dispatch workspace 1
