--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -10,13 +10,16 @@ bind = $mainMod, X, killactive,
 bind = $mainMod, Backspace, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, C, exec, $menu
+bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock # lock screen
 #FullScreen mode
 bind = $mainMod, F, exec, firefox
 bind = $mainMod, G, fullscreen
+
+#Notifications
+bind = $mainMod, N, exec, swaync-client -t
 
 #Chat apps
 bind = $mainMod, Q, workspace, 4 # Jump to WhatsApp
@@ -45,9 +48,9 @@ bind = $mainMod, 0, workspace, 10
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, Q, movetoworkspace, 4
+bind = $mainMod SHIFT, D, movetoworkspace, 5
+bind = $mainMod SHIFT, W, movetoworkspace, 6
 bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
