--- a/waybar/config
+++ b/waybar/config
@@ -4,15 +4,16 @@
     "margin-right": 10,
     "height": 42,
     "modules-left": [
-    	"cpu",
-	"memory",
-	"custom/gpu"
+    "hyprland/workspaces",
     ],
     "modules-center": [
-        "hyprland/workspaces",
-	"clock"
+	"clock",
+	"custom/notification",
     ],
     "modules-right": [
+	"cpu",
+        "memory",
+        "custom/gpu",
         "custom/updates",
 	"pulseaudio",
         "custom/power"
@@ -55,7 +56,7 @@
         "tooltip-format": "GPU: 6800XT\nGPU Usage: {}%"
     },
     "custom/updates": {
-        "exec": "pacman -Qu | wc -l",
+        "exec": "checkupdates | wc -l",
         "interval": 10,
         "format": "\udb81\udeb0 {}",
         "tooltip": true,
@@ -72,13 +73,34 @@
         "on-click": "pavucontrol"
     },
     "custom/power": {
-        "format": " <span foreground='#f38ba8'></span> ",
-        "rotate": 0,
-        "exec": "echo ; echo  logout",
-        "on-click": "logoutlaunch.sh 2",
-        "on-click-right": "logoutlaunch.sh 1",
-        "interval" : 86400, // once every day
-        "tooltip": true
+    "format": " <span foreground='#f38ba8'> </span> ",
+    "rotate": 0,
+    "exec": "echo  ; echo  logout",
+    "on-click": "wlogout",
+    "interval": 86400,
+    "tooltip": true
     },
+  "custom/notification": {
+    "tooltip": false,
+    "format": "{icon}",
+    "format-icons": {
+      "notification": "<span foreground='red'><sup></sup></span>",
+      "none": "",
+      "dnd-notification": "<span foreground='red'><sup></sup></span>",
+      "dnd-none": "",
+      "inhibited-notification": "<span foreground='red'><sup></sup></span>",
+      "inhibited-none": "",
+      "dnd-inhibited-notification": "<span foreground='red'><sup></sup></span>",
+      "dnd-inhibited-none": ""
+    },
+    "return-type": "json",
+    "exec-if": "which swaync-client",
+    "exec": "swaync-client -swb",
+    "on-click": "swaync-client -t -sw",
+    "on-click-right": "swaync-client -d -sw",
+    "escape": true
+  },
+
+
 }
 }
