--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -17,7 +17,7 @@ bind = $mainMod, L, exec, hyprlock # lock screen
 #FullScreen mode
 bind = $mainMod, F, exec, firefox
 bind = $mainMod, G, fullscreen
-
+bind = $mainMod, C, exec, vscode
 #Notifications
 bind = $mainMod, N, exec, swaync-client -t
 
