--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,18 +12,16 @@ monitor=HDMI-A-1,1920x1080@144,0x0,1    # Omen 25 on the left at 144Hz
 # █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-exec = swaybg -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png -m fill
+#exec = swaybg -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png -m fill
 exec-once= waybar
 exec-once = swww init
-exec-once = /home/somvilla/dotfiles/scripts/wallpaperswitch.sh
+exec-once = /home/gary/dotfiles/scripts/wallpaperswitch.sh
 #exec = swaybg -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png -m fill
 #exec = swaybg -i /home/somvilla/Downloads/1348185.png -m fill
 #exec = swaybg -i /home/somvilla/Downloads/01.jpg -m fill
 
 exec-once= swanync
-exec-once = sleep 3 && discord &
-exec-once = sleep 3 && wasistlos &
-exec-once = sleep 4 && hyprctl dispatch workspace 1
+#exec-once = sleep 4 && hyprctl dispatch workspace 1
 #exec-once=firefox
 
 # Set programs that you use
