--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -2,11 +2,12 @@
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = META # Sets "Windows" key as main modifier
+$mainMod = SUPER # Sets "Windows" key as main modifier
+$altMod = ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, $terminal
-bind = $mainMod, X, killactive,
+bind = $altMod, Return, exec, $terminal
+bind = $altMod, X, killactive,
 bind = $mainMod, Backspace, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
@@ -15,23 +16,25 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock # lock screen
 #FullScreen mode
-bind = $mainMod, F, exec, firefox
-bind = $mainMod, G, fullscreen
+bind = $altMod, F, exec, firefox
+bind = $altMod, G, fullscreen, 1 # waybar will be visable
+bind = $mainMod $altMod, G, fullscreen, 0 # waybar wont be visable
 bind = $mainMod, C, exec, vscode
 #Notifications
 bind = $mainMod, N, exec, swaync-client -t
 
 #Chat apps
-bind = $mainMod, Q, workspace, 4 # Jump to WhatsApp
-bind = $mainMod, D, workspace, 5  # Jump to Discord
-bind = $mainMod, W, workspace, 6 # Jump to WhatsApp
+bind = $altMod, Q, workspace, 4 # Jump to WhatsApp
+bind = $altMod, D, workspace, 5  # Jump to Discord
+bind = $altMod, W, workspace, 6 # Jump to WhatsApp
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-
+bind = $altMod, Tab, cyclenext,
+bind = $altMod, Tab, bringactivetotop,
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -59,6 +62,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, P, exec, pypr toggle terminal && hyprctl dispatch bringactivetop
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
