--- a/hypr/windowrules.conf
+++ b/hypr/windowrules.conf
@@ -47,8 +47,23 @@ windowrule = float, title:^(Open Folder)(.*)$
 windowrule = float, title:^(Save As)(.*)$
 windowrule = float, title:^(Library)(.*)$
 windowrule = float, title:^(File Upload)(.*)$
-windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = center, class:^(org.pulseaudio.pavucontrol)$
+
+### PAVUCONTROL ###
+$pavucontrol = class:(org.pulseaudio.pavucontrol)
+windowrulev2 = float, $pavucontrol
+windowrulev2 = size 40% 40%, $pavucontrol
+windowrulev2 = move 55% 40, $pavucontrol
+
+### KDE APPS ###
+$kde = class:(.*kde.*)
+windowrulev2 = opacity 0.87 0.8 override, $kde
+
+#### SCRATCHPAD ####
+$scratchpad = class:^(.*scratchpad)$
+windowrulev2 = float, $scratchpad
+windowrulev2 = size 90% 90%, $scratchpad
+windowrulev2 = center, $scratchpad
+windowrulev2 = workspace special silent, $scratchpad
 
 # ######## Picture-in-Picture ########
 windowrulev2 = keepaspectratio, title:^(Picture(-| )in(-| )[Pp]icture)$
@@ -88,3 +103,7 @@ layerrule = animation slide right, sideright.*
 layerrule = noanim, indicator.*
 layerrule = noanim, wofi
 
+# WLOGOUT
+$wlogout = logout_dialog
+layerrule = blur, $wlogout
+layerrule = dimaround, $wlogout
