--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -34,6 +34,7 @@ map ctrl+backspace send_text all \x17
 # The basic colors
 foreground              #CDD6F4
 background              #1E1E2E
+#background		#0F131A
 selection_foreground    #1E1E2E
 selection_background    #F5E0DC
 
