dotfiles with rofi before claude changes

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,8 +27,8 @@ exec-once= swanync
 # Set programs that you use
 $terminal = kitty
 $fileManager = nemo
-$menu = wofi --show drun
-
+#$menu = wofi --show drun
+$menu = rofi -show drun
 
 # █▀▀ █▄░█ █░█
 # ██▄ █░▀█ ▀▄▀
