--- a/hypr/windowrules.conf
+++ b/hypr/windowrules.conf
@@ -22,7 +22,7 @@ windowrulev2 = opacity 0.9 0.9, class:^(code)$  # VS Code
 windowrulev2 = opacity 0.95 0.95, class:^(nemo)$
 windowrulev2 = float, class:^(wofi)$
 windowrulev2 = nofocus, class:^(wofi)$
-
+windowrulev2 = opacity 0.95 0.95, class:^(rofi)$
 # Gaming applications
 windowrulev2 = immediate, class:^(lutris)$
 windowrulev2 = noblur, class:^(lutris)$
