--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,9 +21,11 @@ exec-once = /home/gary/dotfiles/scripts/wallpaperswitch.sh
 #exec = swaybg -i /home/somvilla/Downloads/01.jpg -m fill
 
 exec-once= swanync
-#exec-once = sleep 4 && hyprctl dispatch workspace 1
 #exec-once=firefox
+#exec-once= hyprctl dispatch [workspace 7 silent] steam
+exec-once=  launch-apps.sh
 
+exec-once = hyprctl dispatch workspace 1 # Focus workspace 1
 # Set programs that you use
 $terminal = kitty
 $fileManager = nemo
