--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -10,23 +10,29 @@ bind = $altMod, Return, exec, $terminal
 bind = $altMod, X, killactive,
 bind = $mainMod, Backspace, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock # lock screen
+
 #FullScreen mode
 bind = $altMod, F, exec, firefox
 bind = $altMod, G, fullscreen, 1 # waybar will be visable
 bind = $mainMod $altMod, G, fullscreen, 0 # waybar wont be visable
-bind = $mainMod, C, exec, vscode
 #Notifications
 bind = $mainMod, N, exec, swaync-client -t
 
-#Chat apps
-bind = $altMod, Q, workspace, 4 # Jump to WhatsApp
+#Apps
+bind = $altMod, A, workspace, 1 # Main
+bind = $altMod, C, workspace, 2 # Jump to VS Code
+bind = $altMod, M, workspace, 3 # Jump to Spotube
+bind = $altMod, Q, workspace, 4 # Jump to Firefox
 bind = $altMod, D, workspace, 5  # Jump to Discord
 bind = $altMod, W, workspace, 6 # Jump to WhatsApp
+bind = $altMod, S, workspace, 7 # Jump to Steam
+bind = $altMod, B, workspace, 8 # Jump to Battle Net
+bind = $altMod, E, workspace, 9 # Jump to Email
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -61,7 +67,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $altMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, P, exec, pypr toggle terminal && hyprctl dispatch bringactivetop
 
 # Scroll through existing workspaces with mainMod + scroll
@@ -86,4 +92,4 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-bind =, Print, exec, grim -g "$(slurp)" - | wl-copy && wl-paste > ~/Pictures/Screenshots/Screenshot-$(date +%F_%T).png | dunstify "Screenshot of the region taken" -t 1000 # screenshot of a region 
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy && wl-paste > ~/Pictures/Screenshots/Screenshot-$(date +%F_%T).png | dunstify "Screenshot of the region taken" -t 1000 # screenshot of a region 
