--- a/hypr/windowrules.conf
+++ b/hypr/windowrules.conf
@@ -2,20 +2,29 @@
 # ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
 # ######## Workspace Assignment ########
-workspace = 1, monitor:DP-2    # Workspace 1 always on main monitor
-workspace = 2, monitor:DP-2
-workspace = 3, monitor:DP-2
+workspace = 1, monitor:DP-3    # Workspace 1 always on main monitor
+workspace = 2, monitor:DP-3
+workspace = 3, monitor:DP-3
 workspace = 4, monitor:HDMI-A-1
 workspace = 5, monitor:HDMI-A-1  # Discord workspace always on second monitor
 workspace = 6, monitor:HDMI-A-1  # WhatsApp workspace always on second monitor
-
+workspace = 7, monitor:DP-3
+workspace = 8, monitor:DP-3
+workspace = 9, monitor:HDMI-A-1
 # ######## App-Specific Rules ########
 # Chat Apps
+windowrulev2 = workspace 1, class:^(kitty)$
+windowrulev2 = workspace 2 silent, class:^(code-oss)$
+windowrulev2 = workspace 3 silent, class:^(spotube)$
+windowrulev2 = workspace 4,class:^(firefox)$
 windowrulev2 = workspace 5 silent, class:^(discord)$
 windowrulev2 = workspace 6 silent, class:^(wasistlos)$
-windowrulev2 = monitor HDMI-A-1, class:^(discord)$
-windowrulev2 = monitor HDMI-A-1, class:^(wasistlos)$
-
+#windowrulev2 = monitor HDMI-A-1, class:^(discord)$
+#windowrulev2 = monitor HDMI-A-1, class:^(wasistlos)$
+windowrulev2 = workspace 7 silent, class:^(steam)$
+windowrulev2 = workspace 8 silent, class:^(battle.net.exe)$
+windowrulev2 = workspace 8 silent, class:^(explorer.exe)$
+windowrulev2 = workspace 9, class:^(Proton Mail)$
 # Your specific applications
 windowrulev2 = opacity 0.95 0.95, class:^(kitty)$
 windowrulev2 = opacity 0.9 0.9, class:^(code)$  # VS Code
@@ -23,14 +32,15 @@ windowrulev2 = opacity 0.95 0.95, class:^(nemo)$
 windowrulev2 = float, class:^(wofi)$
 windowrulev2 = nofocus, class:^(wofi)$
 windowrulev2 = opacity 0.95 0.95, class:^(rofi)$
+windowrulev2 = opacity 0 0, class:^(explorer.exe)$
 # Gaming applications
 windowrulev2 = immediate, class:^(lutris)$
 windowrulev2 = noblur, class:^(lutris)$
 windowrulev2 = immediate, class:^(Battle.net.exe)$
 windowrulev2 = noblur, class:^(Battle.net.exe)$
 windowrulev2 = immediate, title:^(Battle.net)$
-windowrulev2 = float, title:^(Battle.net)$
-
+#windowrulev2 = float, title:^(Battle.net)$
+#windowrule = float, ^(steam)$
 # ######## Dialog Windows ########
 windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrule = center, title:^(Open File)(.*)$
