--- a/hypr/windowrules.conf
+++ b/hypr/windowrules.conf
@@ -5,26 +5,33 @@
 workspace = 1, monitor:DP-3    # Workspace 1 always on main monitor
 workspace = 2, monitor:DP-3
 workspace = 3, monitor:DP-3
-workspace = 4, monitor:HDMI-A-1
-workspace = 5, monitor:HDMI-A-1  # Discord workspace always on second monitor
-workspace = 6, monitor:HDMI-A-1  # WhatsApp workspace always on second monitor
+workspace = 4, monitor:DP-3
+workspace = 5, monitor:DP-3
+workspace = 6, monitor:DP-3
 workspace = 7, monitor:DP-3
 workspace = 8, monitor:DP-3
-workspace = 9, monitor:HDMI-A-1
+workspace = 9, monitor:DP-3
+workspace = 10, monitor:DP-3
+# Second screen
+workspace = 11, monitor:HDMI-A-1  
+workspace = 12, monitor:HDMI-A-1 
+workspace = 13, monitor:HDMI-A-1
+workspace = 14, monitor:HDMI-A-1  
+workspace = 15, monitor:HDMI-A-1 
+workspace = 16, monitor:HDMI-A-1  
+workspace = 17, monitor:HDMI-A-1  
+workspace = 18, monitor:HDMI-A-1  
+workspace = 19, monitor:HDMI-A-1  
+workspace = 20, monitor:HDMI-A-1  
 # ######## App-Specific Rules ########
 # Chat Apps
-windowrulev2 = workspace 1, class:^(kitty)$
-windowrulev2 = workspace 2 silent, class:^(code-oss)$
-windowrulev2 = workspace 3 silent, class:^(spotube)$
-windowrulev2 = workspace 4,class:^(firefox)$
-windowrulev2 = workspace 5 silent, class:^(discord)$
-windowrulev2 = workspace 6 silent, class:^(wasistlos)$
+#windowrulev2 = workspace 5 silent, class:^(discord)$
+#windowrulev1 = workspace 6 silent, class:^(wasistlos)$
 #windowrulev2 = monitor HDMI-A-1, class:^(discord)$
 #windowrulev2 = monitor HDMI-A-1, class:^(wasistlos)$
-windowrulev2 = workspace 7 silent, class:^(steam)$
-windowrulev2 = workspace 8 silent, class:^(battle.net.exe)$
-windowrulev2 = workspace 8 silent, class:^(explorer.exe)$
-windowrulev2 = workspace 9, class:^(Proton Mail)$
+windowrulev2 = workspace 8, class:^(steam)$
+windowrulev2 = workspace 9 silent, class:^(battle.net.exe)$
+#windowrulev2 = workspace 8, class:^(explorer.exe)$
 # Your specific applications
 windowrulev2 = opacity 0.95 0.95, class:^(kitty)$
 windowrulev2 = opacity 0.9 0.9, class:^(code)$  # VS Code
@@ -39,7 +46,7 @@ windowrulev2 = noblur, class:^(lutris)$
 windowrulev2 = immediate, class:^(Battle.net.exe)$
 windowrulev2 = noblur, class:^(Battle.net.exe)$
 windowrulev2 = immediate, title:^(Battle.net)$
-#windowrulev2 = float, title:^(Battle.net)$
+windowrulev2 = float, title:^(Battle.net)$
 #windowrule = float, ^(steam)$
 # ######## Dialog Windows ########
 windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
@@ -84,7 +91,7 @@ windowrulev2 = pin, title:^(Picture(-| )in(-| )[Pp]icture)$
 
 # ######## Performance Rules ########
 # Tearing prevention for games
-windowrule = immediate, .*\.exe
+#windowrulev2 = immediate, .*\.exe
 windowrulev2 = immediate, class:(steam_app)
 windowrulev2 = noblur, class:.*\.exe  # Disable blur for Windows games
 windowrulev2 = noblur, class:(steam_app)  # Disable blur for Steam games
