--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,8 +14,7 @@ monitor=HDMI-A-1,1920x1080@144,0x0,1    # Omen 25 on the left at 144Hz
 # See https://wiki.hyprland.org/Configuring/Keywords/
 #exec = swaybg -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png -m fill
 exec-once= waybar
-exec-once = swww init
-exec-once = /home/gary/dotfiles/scripts/wallpaperswitch.sh
+exec-once = swww-daemon && sleep 2 && swww init && sleep 3 && /home/gary/dotfiles/scripts/wallpaperswitch.sh
 #exec = swaybg -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png -m fill
 #exec = swaybg -i /home/somvilla/Downloads/1348185.png -m fill
 #exec = swaybg -i /home/somvilla/Downloads/01.jpg -m fill
@@ -23,8 +22,8 @@ exec-once = /home/gary/dotfiles/scripts/wallpaperswitch.sh
 exec-once= swanync
 #exec-once=firefox
 #exec-once= hyprctl dispatch [workspace 7 silent] steam
-exec-once=  launch-apps.sh
-
+#exec-once=  launch-apps.sh
+exec-once = sleep 5 && /home/gary/dotfiles/scripts/launch-apps.sh
 exec-once = hyprctl dispatch workspace 1 # Focus workspace 1
 # Set programs that you use
 $terminal = kitty
@@ -48,7 +47,7 @@ input {
     kb_layout = gb
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = caps:super, lv3:ralt_alt
     kb_rules =
 
     follow_mouse = 1
@@ -60,10 +59,10 @@ input {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+
+
+
+
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
