--- a/waybar/config
+++ b/waybar/config
@@ -4,7 +4,7 @@
     "margin-right": 10,
     "height": 42,
     "modules-left": [
-    "hyprland/workspaces",
+    "hyprland/workspaces"
     ],
     "modules-center": [
 	"clock"
@@ -22,20 +22,20 @@
         "format": "{icon} ",
         "on-click": "activate",
         "format-icons": {
-            "1": "\uf120",
-            "2": "\uf121",
-            "3": "\uf001",
-	    "4": "\uf269",
-	    "5": "\uf392",
-	    "6": "\uf232",
-	    "7": "\uf1b6",
-	    "8": "\uf835",
-	    "9": "\uf0e0"
+            "6": "\uf120", //terminal
+            "7": "\uf121", //code
+            "18": "\uf001", //music
+            "17": "\uf392", //discord
+            "16": "\uf232", //whatsapp
+            "8": "\uf1b6", //steam
+            "9": "\uf835", //battle net
+            "19": "\uf0e0", //mail
+            "10": "\uf249" //obsidian
         },
-        "sort-by-number": true,
+        "sort-by-number": false,
         "persistent-workspaces": {
-            "*": 3,
-            "HDMI-A-1": 3
+            "DP-3": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],
+            "HDMI-A-1": [11, 12, 13, 14, 15, 16, 17 , 18, 19,20] 
         }
     },
     "clock": {
@@ -103,8 +103,8 @@
     "on-click": "swaync-client -t -sw",
     "on-click-right": "swaync-client -d -sw",
     "escape": true
-  },
+  }
 
 
 }
-}
+
