--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -37,6 +37,7 @@ $WS_CODE=7
 $WS_STEAM=8
 $WS_BNET=9
 $WS_OBSIDIAN=10
+$WS_WEB=$WS_MAIN3
 
 # ---- Second Monitor
 $WS_SECOND=11
@@ -73,13 +74,19 @@ bind = $mainMod, B, workspace, $WS_BNET
 bind = $mainMod, P, workspace, $WS_MAIL
 bind = $mainMod, O, workspace, $WS_OBSIDIAN
 
-bind = $mainMod, 2, workspace, 2 
 # ----- Send window (stay on current desk): Super + Alt + letter -----
 bind = $mainMod $altMod, T, movetoworkspace, $WS_TERMINAL
 bind = $mainMod $altMod, A, movetoworkspace, $WS_MAIN
 bind = $mainMod $altMod, 1, movetoworkspace, $WS_MAIN
-bind = $mainMod $altMod, 2, movetoworkspace, 2
-bind = $mainMod $altMod, 3, movetoworkspace, 3
+bind = $mainMod $altMod, 2, movetoworkspace, $WS_MAIN2
+bind = $mainMod $altMod, 3, movetoworkspace, $WS_MAIN3
+bind = $mainMod $altMod, 4, movetoworkspace, $WS_MAIN4
+bind = $mainMod $altMod, 5, movetoworkspace, $WS_MAIN5
+bind = $mainMod $altMod, 6, movetoworkspace, $WS_SECOND
+bind = $mainMod $altMod, 7, movetoworkspace, $WS_SECOND2
+bind = $mainMod $altMod, 8, movetoworkspace, $WS_SECOND3
+bind = $mainMod $altMod, 9, movetoworkspace, $WS_SECOND4
+bind = $mainMod $altMod, 0, movetoworkspace, $WS_SECOND5
 bind = $mainMod $altMod, C, movetoworkspace, $WS_CODE
 bind = $mainMod $altMod, F, movetoworkspace, $WS_WEB
 bind = $mainMod $altMod, Q, movetoworkspace, $WS_WEB
@@ -92,11 +99,18 @@ bind = $mainMod $altMod, P, movetoworkspace, $WS_MAIL
 bind = $mainMod $altMod, O, movetoworkspace, $WS_OBSIDIAN
 
 # ----- Send + follow (one key does both): Super + Shift + letter -----
-bind = $mainMod SHIFT, T, exec, hyprctl dispatch movetoworkspace $WS_TERMINAL;     hyprctl dispatch workspace $WS_TERMINAL
+bind = $mainMod SHIFT, T, exec, hyprctl dispatch movetoworkspace $WS_TERMINAL; hyprctl dispatch workspace $WS_TERMINAL
 bind = $mainMod SHIFT, A, exec, hyprctl dispatch movetoworkspace $WS_MAIN;     hyprctl dispatch workspace $WS_MAIN
 bind = $mainMod SHIFT, 1, exec, hyprctl dispatch movetoworkspace $WS_MAIN;     hyprctl dispatch workspace $WS_MAIN
-bind = $mainMod SHIFT, 2, exec, hyprctl dispatch movetoworkspace 2;	       hyprctl dispatch workspace $WS_MAIN
-bind = $mainMod SHIFT, 3, exec, hyprctl dispatch movetoworkspace 3;	       hyprctl dispatch workspace $WS_MAIN
+bind = $mainMod SHIFT, 2, exec, hyprctl dispatch movetoworkspace $WS_MAIN2;    hyprctl dispatch workspace $WS_MAIN2
+bind = $mainMod SHIFT, 3, exec, hyprctl dispatch movetoworkspace $WS_MAIN3;    hyprctl dispatch workspace $WS_MAIN3
+bind = $mainMod SHIFT, 4, exec, hyprctl dispatch movetoworkspace $WS_MAIN4;    hyprctl dispatch workspace $WS_MAIN4
+bind = $mainMod SHIFT, 5, exec, hyprctl dispatch movetoworkspace $WS_MAIN5;    hyprctl dispatch workspace $WS_MAIN5
+bind = $mainMod SHIFT, 6, exec, hyprctl dispatch movetoworkspace $WS_SECOND;   hyprctl dispatch workspace $WS_SECOND
+bind = $mainMod SHIFT, 7, exec, hyprctl dispatch movetoworkspace $WS_SECOND2;  hyprctl dispatch workspace $WS_SECOND2
+bind = $mainMod SHIFT, 8, exec, hyprctl dispatch movetoworkspace $WS_SECOND3;  hyprctl dispatch workspace $WS_SECOND3
+bind = $mainMod SHIFT, 9, exec, hyprctl dispatch movetoworkspace $WS_SECOND4;  hyprctl dispatch workspace $WS_SECOND4
+bind = $mainMod SHIFT, 0, exec, hyprctl dispatch movetoworkspace $WS_SECOND5;  hyprctl dispatch workspace $WS_SECOND5
 bind = $mainMod SHIFT, C, exec, hyprctl dispatch movetoworkspace $WS_CODE;     hyprctl dispatch workspace $WS_CODE
 bind = $mainMod SHIFT, F, exec, hyprctl dispatch movetoworkspace $WS_WEB;      hyprctl dispatch workspace $WS_WEB
 bind = $mainMod SHIFT, Q, exec, hyprctl dispatch movetoworkspace $WS_WEB;      hyprctl dispatch workspace $WS_WEB
@@ -134,7 +148,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 bind = $mainMod $altMod, k, movewindow, u
 bind = $mainMod $altMod, h, movewindow, l
 bind = $mainMod $altMod, j, movewindow, d
-bind = $mainMod $altMod, l, movewindow# r
+bind = $mainMod $altMod, l, movewindow, r
 
 # Move the active window within the monitor
 bind = $mainMod $altMod, up, movewindow, u
