--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,7 +5,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
-monitor=DP-2,2560x1440@240,1920x0,1    # Omen X 27 (main monitor) at 240Hz
+monitor=DP-3,2560x1440@240,1920x0,1    # Omen X 27 (main monitor) at 240Hz
 monitor=HDMI-A-1,1920x1080@144,0x0,1    # Omen 25 on the left at 144Hz
 
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
@@ -13,13 +13,13 @@ monitor=HDMI-A-1,1920x1080@144,0x0,1    # Omen 25 on the left at 144Hz
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 #exec = swaybg -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png -m fill
-exec-once= waybar
+exec-once = waybar
 exec-once = swww-daemon && sleep 2 && swww init && sleep 3 && /home/gary/dotfiles/scripts/wallpaperswitch.sh
 #exec = swaybg -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png -m fill
 #exec = swaybg -i /home/somvilla/Downloads/1348185.png -m fill
 #exec = swaybg -i /home/somvilla/Downloads/01.jpg -m fill
 
-exec-once= swanync
+exec-once = swaync
 #exec-once=firefox
 #exec-once= hyprctl dispatch [workspace 7 silent] steam
 #exec-once=  launch-apps.sh
