--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -95,63 +95,64 @@ label {
 #     opacity = 1
 # }
 
-image {
-    monitor = 
-    size = 256 # lesser side if not 1:1 ratio
-    rounding = 6 # negative values mean circle
-    border_size = 3
-    border_color =  rgb(133, 180, 234)
-    rotate = 0 # degrees, counter-clockwise
-    reload_time = 2
-    reload_cmd = ~/.config/hypr/scripts/art.sh
-    position = 0, -25
-    halign = center
-    valign = center
-    opacity = 1
-}
+# image block and status labels disabled until helper scripts exist
+# image {
+#     monitor = 
+#     size = 256 # lesser side if not 1:1 ratio
+#     rounding = 6 # negative values mean circle
+#     border_size = 3
+#     border_color =  rgb(133, 180, 234)
+#     rotate = 0 # degrees, counter-clockwise
+#     reload_time = 2
+#     reload_cmd = ~/.config/hypr/scripts/art.sh
+#     position = 0, -25
+#     halign = center
+#     valign = center
+#     opacity = 1
+# }
 
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(/home/tdm/.config/hypr/scripts/songdetail.sh --title)" 
-    color = rgba(209, 207, 207, 0.75)
-    #color = rgba(255, 255, 255, 0.6)
-    font_size = 17  
-    font_family = Source Code Pro bold
-    position = 0, -200
-    halign = center
-    valign = center
-}
+# label {
+#     monitor =
+#     text = cmd[update:1000] echo "$(/home/tdm/.config/hypr/scripts/songdetail.sh --title)" 
+#     color = rgba(209, 207, 207, 0.75)
+#     #color = rgba(255, 255, 255, 0.6)
+#     font_size = 17  
+#     font_family = Source Code Pro bold
+#     position = 0, -200
+#     halign = center
+#     valign = center
+# }
 
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(/home/tdm/.config/hypr/scripts/songdetail.sh --artist)" 
-    color = rgba(209, 207, 207, 0.75)
-    #color = rgba(255, 255, 255, 0.6)
-    font_size = 15  
-    font_family = Source Code Pro
-    position = 0, -230
-    halign = center
-    valign = center
-}
+# label {
+#     monitor =
+#     text = cmd[update:1000] echo "$(/home/tdm/.config/hypr/scripts/songdetail.sh --artist)" 
+#     color = rgba(209, 207, 207, 0.75)
+#     #color = rgba(255, 255, 255, 0.6)
+#     font_size = 15  
+#     font_family = Source Code Pro
+#     position = 0, -230
+#     halign = center
+#     valign = center
+# }
 
-label {
-    monitor =
-    text = cmd[update:5000] echo "$(/home/tdm/.config/hypr/scripts/network.sh)"
-    color = rgba(209, 207, 207, 0.75)
-    font_size = 14
-    font_family = Source Code Pro bold
-    position = -20, -10
-    halign = right
-    valign = top
-}
+# label {
+#     monitor =
+#     text = cmd[update:5000] echo "$(/home/tdm/.config/hypr/scripts/network.sh)"
+#     color = rgba(209, 207, 207, 0.75)
+#     font_size = 14
+#     font_family = Source Code Pro bold
+#     position = -20, -10
+#     halign = right
+#     valign = top
+# }
 
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(/home/tdm/.config/hypr/scripts/input.sh)"
-    color = rgba(209, 207, 207, 0.75)
-    font_size = 14
-    font_family = Source Code Pro bold
-    position = -50, -10
-    halign = right
-    valign = top
-}
+# label {
+#     monitor =
+#     text = cmd[update:1000] echo "$(/home/tdm/.config/hypr/scripts/input.sh)"
+#     color = rgba(209, 207, 207, 0.75)
+#     font_size = 14
+#     font_family = Source Code Pro bold
+#     position = -50, -10
+#     halign = right
+#     valign = top
+# }
