--- a/waybar/config
+++ b/waybar/config
@@ -11,6 +11,7 @@
     ],
     "modules-right": [
 	"custom/notification",
+        "custom/wireguard",
 	"cpu",
         "memory",
         "custom/gpu",
@@ -84,6 +85,14 @@
     "interval": 86400,
     "tooltip": true
     },
+    "custom/wireguard": {
+        "exec": "~/.config/waybar/scripts/wireguard.sh",
+        "return-type": "json",
+        "interval": 5,
+        "signal": 8,
+        "on-click": "~/.config/waybar/scripts/wireguard.sh toggle",
+        "tooltip": true
+    },
   "custom/notification": {
     "tooltip": false,
     "format": "{icon}",
@@ -107,4 +116,3 @@
 
 
 }
-
