--- a/hypr/windowrules.conf
+++ b/hypr/windowrules.conf
@@ -29,9 +29,15 @@ workspace = 20, monitor:HDMI-A-1
 #windowrulev1 = workspace 6 silent, class:^(wasistlos)$
 #windowrulev2 = monitor HDMI-A-1, class:^(discord)$
 #windowrulev2 = monitor HDMI-A-1, class:^(wasistlos)$
-windowrulev2 = workspace 8, class:^(steam)$
-windowrulev2 = workspace 9 silent, class:^(battle.net.exe)$
+#windowrulev2 = workspace 8, class:^(steam)$
+#windowrulev2 = workspace 9 silent, class:^(battle.net.exe)$
 #windowrulev2 = workspace 8, class:^(explorer.exe)$
+windowrulev2 = workspace 17 silent, class:^(discord)$
+windowrulev2 = workspace 17 silent, class:^(Discord)$
+windowrulev2 = workspace 8 silent, class:^(steam)$
+windowrulev2 = workspace 8 silent, class:^(Steam)$
+windowrulev2 = workspace 7 silent, class:^(code)$
+windowrulev2 = workspace 7 silent, class:^(Code)$
 # Your specific applications
 windowrulev2 = opacity 0.95 0.95, class:^(kitty)$
 windowrulev2 = opacity 0.9 0.9, class:^(code)$  # VS Code
