--- a/waybar/config
+++ b/waybar/config
@@ -29,7 +29,7 @@
             "17": "󰙯", //discord
             "16": "\uf232", //whatsapp
             "8": "\uf1b6", //steam
-            "9": "󰣕", //battle net
+            "9": "\uf11b", //gaming
             "19": "\uf0e0", //mail
             "10": "\uf249" //obsidian
         },
