Add ulauncher configuration to hyprland and windowrules

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -25,11 +25,12 @@ exec-once = swaync
 #exec-once=  launch-apps.sh
 exec-once = sleep 5 && /home/gary/dotfiles/scripts/launch-apps.sh
 exec-once = hyprctl dispatch workspace 1 # Focus workspace 1
+exec-once = ulauncher --hide-window
 # Set programs that you use
 $terminal = kitty
 $fileManager = nemo
 #$menu = wofi --show drun
-$menu = rofi -show drun
+$menu = ulauncher-toggle 
 
 # █▀▀ █▄░█ █░█
 # ██▄ █░▀█ ▀▄▀
