--- a/hypr/windowrules.conf
+++ b/hypr/windowrules.conf
@@ -130,3 +130,11 @@ layerrule = noanim, wofi
 $wlogout = logout_dialog
 layerrule = blur, $wlogout
 layerrule = dimaround, $wlogout
+
+# ULAUNCHER
+windowrulev2 = float, class:^(ulauncher)$
+windowrulev2 = stayfocused, class:^(ulauncher)$
+windowrulev2 = bordersize 0, class:^(ulauncher)$
+windowrulev2 = noborder, class:^(ulauncher)$
+windowrulev2 = size 50% 60%, class:^(ulauncher)$
+windowrulev2 = center, class:^(ulauncher)$
