--- a/hypr/windowrules.conf
+++ b/hypr/windowrules.conf
@@ -136,5 +136,9 @@ windowrulev2 = float, class:^(ulauncher)$
 windowrulev2 = stayfocused, class:^(ulauncher)$
 windowrulev2 = bordersize 0, class:^(ulauncher)$
 windowrulev2 = noborder, class:^(ulauncher)$
-windowrulev2 = size 50% 60%, class:^(ulauncher)$
+windowrulev2 = norounding, class:^(ulauncher)$
+windowrulev2 = noshadow, class:^(ulauncher)$
+windowrulev2 = noblur, class:^(ulauncher)$
+windowrulev2 = size 50% 60%, class:^(ulancher)$
 windowrulev2 = center, class:^(ulauncher)$
+
