--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -27,7 +27,7 @@ exec-once = sleep 5 && /home/gary/dotfiles/scripts/launch-apps.sh
 exec-once = hyprctl dispatch workspace 1 # Focus workspace 1
 exec-once = ulauncher --hide-window
 # Set programs that you use
-$terminal = kitty
+$terminal = wezterm 
 $fileManager = nemo
 #$menu = wofi --show drun
 $menu = ulauncher-toggle 
