--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,8 +13,8 @@ monitor=HDMI-A-1,1920x1080@144,0x0,1    # Omen 25 on the left at 144Hz
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 #exec = swaybg -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png -m fill
-exec-once = waybar
-exec-once = swww-daemon && sleep 2 && swww init && sleep 3 && /home/gary/dotfiles/scripts/wallpaperswitch.sh
+ exec-once = waybar
+ exec-once = swww-daemon && sleep 2 && swww init
 #exec = swaybg -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png -m fill
 #exec = swaybg -i /home/somvilla/Downloads/1348185.png -m fill
 #exec = swaybg -i /home/somvilla/Downloads/01.jpg -m fill
