--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -183,5 +183,8 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-bind = $mainMod, Print, exec, grim -g "$(slurp)" - | wl-copy && wl-paste > ~/Pictures/Screenshots/Screenshot-$(date +%F_%T).png | dunstify "Screenshot of the region taken" -t 1000 # screenshot of a region 
+ bind = $mainMod, Print, exec, grim -g "$(slurp)" - | wl-copy && wl-paste > ~/Pictures/Screenshots/Screenshot-$(date +%F_%T).png | dunstify "Screenshot of the region taken" -t 1000
+
+ # Wallpaper/Theme Toggle
+ bind = $mainMod, R, exec, /home/gary/dotfiles/scripts/wallpaper-toggle.sh toggle # screenshot of a region 
 
