--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -26,19 +26,78 @@ $time\
 [ ](fg:purple)\
 $line_break$character"""
 
-palette = 'catppuccin_mocha'
+# Dynamic palette based on STARSHIP_PALETTE environment variable
+# Set by the wallpaper toggle script
+palette = 'nord'
+
+[palettes.nord]
+# Nord color palette for starship
+text = "#d8dee9"
+surface0 = "#3b4252"
+mantle = "#2e3440"
+base = "#2e3440"
+peach = "#d08770"
+green = "#a3be8c"
+teal = "#88c0d0"
+blue = "#81a1c1"
+purple = "#b48ead"
+red = "#bf616a"
+yellow = "#ebcb8b"
+
+[palettes.tokyo-night]
+# Tokyo Night color palette for starship
+text = "#c0caf5"
+surface0 = "#1a1b26"
+mantle = "#16161e"
+base = "#1a1b26"
+peach = "#ff9e64"
+green = "#9ece6a"
+teal = "#7dcfff"
+blue = "#7aa2f7"
+purple = "#bb9af7"
+red = "#f7768e"
+yellow = "#e0af68"
+
+[palettes.dracula]
+# Dracula color palette for starship
+text = "#f8f8f2"
+surface0 = "#282a36"
+mantle = "#21222c"
+base = "#282a36"
+peach = "#ffb86c"
+green = "#50fa7b"
+teal = "#8be9fd"
+blue = "#6272a4"
+purple = "#bd93f9"
+red = "#ff5555"
+yellow = "#f1fa8c"
+
+[palettes.everforest]
+# Everforest color palette for starship
+text = "#d3c6aa"
+surface0 = "#2d353b"
+mantle = "#232a2e"
+base = "#2d353b"
+peach = "#e69875"
+green = "#a7c080"
+teal = "#83c092"
+blue = "#7fbbb3"
+purple = "#d699b6"
+red = "#e67e80"
+yellow = "#dbbc7f"
 
 [palettes.gruvbox_dark]
-color_fg0 = '#fbf1c7'
-color_bg1 = '#3c3836'
-color_bg3 = '#665c54'
-color_blue = '#458588'
-color_aqua = '#689d6a'
-color_green = '#98971a'
-color_orange = '#d65d0e'
-color_purple = '#b16286'
-color_red = '#cc241d'
-color_yellow = '#d79921'
+text = "#fbf1c7"
+surface0 = "#3c3836"
+mantle = "#282828"
+base = "#282828"
+peach = "#d65d0e"
+green = "#98971a"
+teal = "#689d6a"
+blue = "#458588"
+purple = "#b16286"
+red = "#cc241d"
+yellow = "#d79921"
 
 [palettes.catppuccin_mocha]
 rosewater = "#f5e0dc"
@@ -67,6 +126,62 @@ surface0 = "#313244"
 base = "#1e1e2e"
 mantle = "#181825"
 crust = "#11111b"
+
+[palettes.catppuccin_frappe]
+rosewater = "#f2d5cf"
+flamingo = "#eebebe"
+pink = "#f4b8e4"
+mauve = "#ca9ee6"
+red = "#e78284"
+maroon = "#ea999c"
+peach = "#ef9f76"
+yellow = "#e5c890"
+green = "#a6d189"
+teal = "#81c8be"
+sky = "#99d1db"
+sapphire = "#85c1dc"
+blue = "#8caaee"
+lavender = "#babbf1"
+text = "#c6d0f5"
+subtext1 = "#b5bfe2"
+subtext0 = "#a5adce"
+overlay2 = "#949cbb"
+overlay1 = "#838ba7"
+overlay0 = "#737994"
+surface2 = "#626880"
+surface1 = "#51576d"
+surface0 = "#414559"
+base = "#303446"
+mantle = "#292c3c"
+crust = "#232634"
+
+[palettes.catppuccin_latte]
+rosewater = "#dc8a78"
+flamingo = "#dd7878"
+pink = "#ea76cb"
+mauve = "#8839ef"
+red = "#d20f39"
+maroon = "#e64553"
+peach = "#fe640b"
+yellow = "#df8e1d"
+green = "#40a02b"
+teal = "#179299"
+sky = "#04a5e5"
+sapphire = "#209fb5"
+blue = "#1e66f5"
+lavender = "#7287fd"
+text = "#4c4f69"
+subtext1 = "#5c5f77"
+subtext0 = "#6c6f85"
+overlay2 = "#7c7f93"
+overlay1 = "#8c8fa1"
+overlay0 = "#9ca0b0"
+surface2 = "#acb0be"
+surface1 = "#bcc0cc"
+surface0 = "#ccd0da"
+base = "#eff1f5"
+mantle = "#e6e9ef"
+crust = "#dce0e8"
 
 [os]
 disabled = false
@@ -169,7 +284,7 @@ format = '[[ $symbol( $version) ](fg:base bg:teal)]($style)'
 [docker_context]
 symbol = ""
 style = "bg:mantle"
-format = '[[ $symbol( $context) ](fg:#83a598 bg:color_bg3)]($style)'
+format = '[[ $symbol( $context) ](fg:#83a598 bg:mantle)]($style)'
 
 [time]
 disabled = false
