--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -69,36 +69,37 @@ mark2_background #CBA6F7
 mark3_foreground #1E1E2E
 mark3_background #74C7EC
 
-# The 16 terminal colors
+# The 16 terminal colors - commented out to allow starship palette control
+# Remove these comments to use starship-controlled ANSI colors
 
 # black
-color0 #45475A
-color8 #585B70
+# color0 #45475A
+# color8 #585B70
 
 # red
-color1 #F38BA8
-color9 #F38BA8
+# color1 #F38BA8
+# color9 #F38BA8
 
 # green
-color2  #A6E3A1
-color10 #A6E3A1
+# color2  #A6E3A1
+# color10 #A6E3A1
 
 # yellow
-color3  #F9E2AF
-color11 #F9E2AF
+# color3  #F9E2AF
+# color11 #F9E2AF
 
 # blue
-color4  #89B4FA
-color12 #89B4FA
+# color4  #89B4FA
+# color12 #89B4FA
 
 # magenta
-color5  #F5C2E7
-color13 #F5C2E7
+# color5  #F5C2E7
+# color13 #F5C2E7
 
 # cyan
-color6  #94E2D5
-color14 #94E2D5
+# color6  #94E2D5
+# color14 #94E2D5
 
 # white
-color7  #BAC2DE
-color15 #A6ADC8
+# color7  #BAC2DE
+# color15 #A6ADC8
