feat: update installation scripts and configuration for Hyprland setup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,7 +23,7 @@ exec-once = swaync
 #exec-once=firefox
 #exec-once= hyprctl dispatch [workspace 7 silent] steam
 #exec-once=  launch-apps.sh
-exec-once = sleep 5 && /home/gary/dotfiles/scripts/launch-apps.sh
+ exec-once = sleep 5 && $HOME/dotfiles/scripts/launch-apps.sh
 exec-once = hyprctl dispatch workspace 1 # Focus workspace 1
 exec-once = ulauncher --hide-window
 # Set programs that you use
